common/force-app/main/default/objects/Pricebook_Entry_Log__c/Pricebook_Entry_Log__c.object-meta.xml
<CustomObject>
    <label>Pricebook Entry Log</label>
    <nameField>
        <displayFormat>PEL-{00000}</displayFormat>
        <label>Pricebook Entry Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricebook Entry Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>