common/force-app/main/default/objects/Pricebook_Entry_Log__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FY20</fullName>
            </value>
            <value>
                <fullName>FY21</fullName>
            </value>
            <value>
                <fullName>FY22</fullName>
            </value>
            <value>
                <fullName>FY23</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>