common/force-app/main/default/objects/Pricebook_Entry_Log__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pricebook Entry Logs</relationshipLabel>
    <relationshipName>Pricebook_Entry_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>